corrects height of logo/header row on tablet-sized screens if navigation is present.

--- a/app/styles/layout/_layout.scss
+++ b/app/styles/layout/_layout.scss
@@ -35,7 +35,7 @@
     grid-template-rows: auto auto 1fr 20px;
 
     @include for-tablet-and-up {
-      grid-template-rows: auto auto 1fr 20px;
+      grid-template-rows: 42px auto auto 20px;
     }
 
     @include for-laptop-and-up {
